# soltracker

./: .gitignore  LICENSE  README.md  flake.nix  mix.exs
lib/: block.ex  client.ex  sol_tracker.ex  transfers.ex
lib/sol_tracker/: application.ex  repo.ex
native/metaplex_decoder/: Cargo.toml  README.md
native/metaplex_decoder/src/: lib.rs
nix/: deps.nix  flake.nix  shell.nix
test/: sol_tracker_test.exs
