[package]
name = "metaplex_decoder"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "metaplex_decoder"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.2"
bs58 = "0.4.0"
solana-program = "1.7.11"
spl-token-metadata = "0.0.1"
serde_json = "1.0.67"
serde = "1.0.130"

